Fix ... overlapping with border *again

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body, html{
     font-family: 'Roboto', sans-serif;
     font-size: 50px;
     padding: 30px 20px 0 10px;
+    margin-right: 30px;
 }
 
 button {
